[package]
name = "pgp-dump"
version = "0.1.0"
edition = "2021"
description = "pgp dump"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rpgp/cli"
readme = "README.md"
resolver = "2"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
pgp = "0.12.0-alpha.2"
ratatui = "0.26.1"
tokio = { version = "1.37.0", features = ["full"] }
tui-tree-widget = "0.19.0"
